==> zhuxiaolong-push/MyHealthDetector/Software/Hardware/MAX30102/max30102.c <==
#include "max30102.h"
#include "Com_Delay.h"
#define max30102_WR_address 0xAE

static void MAX30102_IIC_SDA_OUT(void)
{
    GPIO_InitTypeDef GPIO_InitStructure;
    RCC_AHB1PeriphClockCmd(MAX30102_IIC_CLK, ENABLE);
    GPIO_InitStructure.GPIO_Pin = MAX30102_IIC_SDA_PIN;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT;
    GPIO_InitStructure.GPIO_OType = GPIO_OType_OD;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_UP;
    GPIO_Init(MAX30102_IIC_PORT, &GPIO_InitStructure);
}

static void MAX30102_IIC_SDA_IN(void)
{
    GPIO_InitTypeDef GPIO_InitStructure;
    GPIO_InitStructure.GPIO_Pin = MAX30102_IIC_SDA_PIN;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN;
    GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_UP;
    GPIO_Init(MAX30102_IIC_PORT, &GPIO_InitStructure);
}

void MAX30102_IIC_Init(void)
{
    GPIO_InitTypeDef GPIO_InitStructure;
    RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOB, ENABLE);
    
    // 配置为开漏输出，并置高
    GPIO_InitStructure.GPIO_Pin = MAX30102_IIC_SCL_PIN | MAX30102_IIC_SDA_PIN;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT;
    GPIO_InitStructure.GPIO_OType = GPIO_OType_OD;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_UP;
    GPIO_Init(MAX30102_IIC_PORT, &GPIO_InitStructure);
    
    MAX30102_IIC_SCL = 1;
    MAX30102_IIC_SDA = 1;
    delay_us(50);
}

void MAX30102_IIC_Start(void)
{
    MAX30102_IIC_SDA_OUT();
    MAX30102_IIC_SDA = 1;
    MAX30102_IIC_SCL = 1;
    delay_us(30);
    MAX30102_IIC_SDA = 0;
    delay_us(30);
    MAX30102_IIC_SCL = 0;
    delay_us(30);
}

void MAX30102_IIC_Stop(void)
{
    MAX30102_IIC_SDA_OUT();
    MAX30102_IIC_SCL = 0;
    MAX30102_IIC_SDA = 0;
    delay_us(30);
    MAX30102_IIC_SCL = 1;
    delay_us(30);
    MAX30102_IIC_SDA = 1;
    delay_us(30);
}

u8 MAX30102_IIC_Wait_Ack(void)
{
    u8 ucErrTime = 0;
    
    MAX30102_IIC_SDA_IN();
    delay_us(10);
    
    MAX30102_IIC_SCL = 1;
    delay_us(30);
    
    while (MAX30102_READ_SDA)
    {
        ucErrTime++;
        if (ucErrTime > 200)
        {
            MAX30102_IIC_SCL = 0;
            MAX30102_IIC_SDA_OUT();
            return 1;
        }
        delay_us(1);
    }
    
    MAX30102_IIC_SCL = 0;
    delay_us(20);
    MAX30102_IIC_SDA_OUT();
    MAX30102_IIC_SDA = 1;
    delay_us(10);
    
    return 0;
}

void MAX30102_IIC_Ack(void)
{
    MAX30102_IIC_SDA_OUT();
    MAX30102_IIC_SCL = 0;
    MAX30102_IIC_SDA = 0;
    delay_us(30);
    MAX30102_IIC_SCL = 1;
    delay_us(30);
    MAX30102_IIC_SCL = 0;
    delay_us(30);
    MAX30102_IIC_SDA = 1;
}

void MAX30102_IIC_NAck(void)
{
    MAX30102_IIC_SDA_OUT();
    MAX30102_IIC_SCL = 0;
    MAX30102_IIC_SDA = 1;
    delay_us(30);
    MAX30102_IIC_SCL = 1;
    delay_us(30);
    MAX30102_IIC_SCL = 0;
}

void MAX30102_IIC_Send_Byte(u8 txd)
{
    u8 t;
    MAX30102_IIC_SDA_OUT();
    MAX30102_IIC_SCL = 0;
    
    for (t = 0; t < 8; t++)
    {
        MAX30102_IIC_SDA = (txd & 0x80) >> 7;
        txd <<= 1;
        delay_us(20);
        MAX30102_IIC_SCL = 1;
        delay_us(30);
        MAX30102_IIC_SCL = 0;
        delay_us(20);
    }
    MAX30102_IIC_SDA = 1;
    delay_us(10);
}

u8 MAX30102_IIC_Read_Byte(unsigned char ack)
{
    unsigned char i, receive = 0;
    MAX30102_IIC_SDA_IN();
    delay_us(10);
    
    for (i = 0; i < 8; i++)
    {
        MAX30102_IIC_SCL = 0;
        delay_us(30);
        MAX30102_IIC_SCL = 1;
        delay_us(20);
        receive <<= 1;
        if (MAX30102_READ_SDA)
            receive++;
        delay_us(10);
    }
    
    MAX30102_IIC_SCL = 0;
    delay_us(10);
    
    if (!ack)
        MAX30102_IIC_NAck();
    else
        MAX30102_IIC_Ack();
        
    return receive;
}

void MAX30102_IIC_ReadBytes(u8 deviceAddr, u8 writeAddr, u8* data, u8 dataLength)
{
    u8 i;
    MAX30102_IIC_Start();
    MAX30102_IIC_Send_Byte(deviceAddr);
    MAX30102_IIC_Wait_Ack();
    MAX30102_IIC_Send_Byte(writeAddr);
    MAX30102_IIC_Wait_Ack();
    
    // Repeated Start
    MAX30102_IIC_SDA_OUT();
    MAX30102_IIC_SCL = 1;
    MAX30102_IIC_SDA = 1;
    delay_us(50);
    MAX30102_IIC_Start();
    
    MAX30102_IIC_Send_Byte(deviceAddr | 0x01);
    MAX30102_IIC_Wait_Ack();
    
    for(i = 0; i < dataLength - 1; i++)
        data[i] = MAX30102_IIC_Read_Byte(1);
        
    data[dataLength - 1] = MAX30102_IIC_Read_Byte(0);
    MAX30102_IIC_Stop();
    delay_ms(10);
}

void MAX30102_Init(void)
{
    GPIO_InitTypeDef GPIO_InitStructure;

    RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOB, ENABLE);

    GPIO_InitStructure.GPIO_Pin = GPIO_Pin_9;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN;
    GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_UP;
    GPIO_Init(GPIOB, &GPIO_InitStructure);
    
    MAX30102_IIC_Init();
    MAX30102_Reset();
    
    max30102_Bus_Write(REG_INTR_ENABLE_1, 0xc0);
    max30102_Bus_Write(REG_INTR_ENABLE_2, 0x00);
    max30102_Bus_Write(REG_FIFO_WR_PTR, 0x00);
    max30102_Bus_Write(REG_OVF_COUNTER, 0x00);
    max30102_Bus_Write(REG_FIFO_RD_PTR, 0x00);
    max30102_Bus_Write(REG_FIFO_CONFIG, 0x0f);
    max30102_Bus_Write(REG_MODE_CONFIG, 0x03);
    max30102_Bus_Write(REG_SPO2_CONFIG, 0x27);
    max30102_Bus_Write(REG_LED1_PA, 0x24);
    max30102_Bus_Write(REG_LED2_PA, 0x24);
    max30102_Bus_Write(REG_PILOT_PA, 0x7f);
}
